# gcloud-axum-test

./: .dockerignore  Cargo.toml  Dockerfile  app.yaml  rust-toolchain.toml
.github/workflows/: deployment.yml
src/: main.rs
